<?xml version="1.0"?>
<package format="2">
  <name>fbow_ros</name>
  <version>0.0.0</version>
  <description>The fbow_ros package</description>

  <maintainer email="nektarios.sfyris@autonomousdevices.co.uk">Nek</maintainer>


  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>


  <!-- <build_depend>message_generation</build_depend> -->

  <!-- <exec_depend>message_runtime</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
